[package]
name = "bevy-hands-on"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "bouncy",
  "flappy_dragon",
  "hello_bevy",
  "mars_base_one",
  "my_library",
  "pig"
]

[workspace.dependencies]
bevy = { version = "0.16", features = ["wayland"] }
bevy_egui = "0.34.1"
rand = "0.8"
rand_pcg = "0.3"
rand_xorshift = "0.3"

[dependencies]
bevy.workspace = true
