[package]
name = "my_library"
version = "0.1.0"
edition = "2024"

[[bench]]
harness = false
name = "random"

[dependencies]
bevy = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true, optional = true }
rand_xorshift = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = ["pcg"]
locking = []
pcg = ["rand_pcg"]
xorshift = ["rand_xorshift"]
